# nodeenv

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGES  MANIFEST.in  Makefile  README  README.rst  README.ru.rst  index.html  nodeenv.py  nve.py  params.json  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: release.yml
.github/workflows/: main.yml  tests.yml
debian/: changelog  control  nodeenv.links  rules
debian-upstream/: changelog  control  nodeenv.postinst  rules
tests/: Dockerfile  Dockerfile.windows  iojs.htm  iojs_dist.htm  nodeenv_test.py  nodejs.htm  nodejs_dist.htm  nodejs_index.json  test_install_activate.py
